--- a/global.css
+++ b/global.css
@@ -1,9 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-@import url(Footer/footer.css);
 
-*{
-    margin: 0;
-    padding: 0;
-}
+@import url(Footer/footer.css);
+@import url(navBar/navBar.css);
+
