dev: home gallery section

--- a/src/components/homeGallery.html
+++ b/src/components/homeGallery.html
@@ -1,1 +1,14 @@
-<h1>Gallery</h1> <!-- remove this line when developing -->
+<link rel="stylesheet" href="./homeGallery.css">
+
+<div class="container-card">
+    <div class="card">
+        <div class="card-content">
+            <h3>See the real beauty</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipiscing elit Ut et massa mi.</p>
+            <button>View Gallery</button>
+        </div>
+    </div>
+</div>
+    
+
+
