--- a/src/footer/footer.css
+++ b/src/footer/footer.css
@@ -1,15 +1,11 @@
-*{
+.footer-main-div{
     margin: 0;
     padding: 0;
     font-family: 'Montserrat';
     color: white;
     font-weight: lighter;
     box-sizing: border-box;
-}
-
-body{
     display: grid;
-    min-height: 100vh;
     align-content: end;
 }
 
@@ -26,8 +22,6 @@ footer .container-div{
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-gap: 20px;
-    justify-content: center;
-    align-items: center;
 }
 
 .logosec-part1{
@@ -95,6 +89,7 @@ footer .container-div{
 
 .contactinfo a{
     font-size: 15px;
+    color: white;
     text-decoration: none;
     transition: all 0.3s;
 }
@@ -133,11 +128,14 @@ footer .container-div{
     font-size: 16px;
     margin-top: 10px;
     justify-content: center;
+    border: none;
+    outline: none;
 }
 
 .buttonsec-part2 button a{
     text-decoration: none;
     font-weight: normal;
+    color: white;
 }
 
 .copyright{
@@ -171,6 +169,8 @@ footer .container-div{
     }
     .copyright{
         padding: 8px 40px;
+        display: flex;
+        flex-direction: column;
     }
 }
 
