--- a/src/main.css
+++ b/src/main.css
@@ -5,3 +5,9 @@
 @import url(./components/homeGallery.css);
 @import url(./components/forum.css);
 @import url(./footer/footer.css);
+
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
