--- a/src/components/intro.html
+++ b/src/components/intro.html
@@ -1,1 +1,76 @@
-<h1>Intro about page</h1> <!-- remove this line when developing -->
+<div class="introsection">
+    <div class="intro">
+        <div class="row1">
+            <div class="row1-col1">
+                <div class="topic1">
+                    <div class="topic1-part1">
+                        <span>Adam's Peak</span>
+                    </div>
+                    <div class="topic1-part2">
+                        <span>is the,</span>
+                    </div>
+                </div>
+                <div class="description1">
+                    <p>Only mountain in the world that receives benefactions 
+                    and veneration of devotees belonging to different faiths.
+                     This is 2,243m tall. It is well known for the Sri Pada, 
+                     i.e., "sacred footprint", a 1.8 m rock formation near 
+                     the summit, which in Buddhist tradition is held to be 
+                     footprint of Buddha. Portuguese Christians believed St 
+                     Thomas and the eunuch of Candace, queen of Ethiopia.</p>
+                </div>
+                <div class="button1">
+                    <button><a href="#">Read more</a></button>
+                </div>
+            </div>
+            <div class="row1-col2">
+                <img src="../../public/intropic1.svg">
+            </div>
+        </div>
+        <div class="row2">
+            <div class="row2-col1">
+                <div class="part1">
+                    <span>Coordinates</span>
+                </div>
+                <div class="part2">
+                    <span>6.8096° N, 80.4994° E</span>
+                </div>
+            </div>
+            <div class="row2-col2">
+                <div class="topic2">
+                    <div class="topic2-part1">
+                        <span>6 trails, One </span>
+                    </div>
+                    <div class="topic2-part2">
+                        <span>Sacred location.</span>
+                    </div>
+                </div>
+                <div class="description2">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut et 
+                    massa mi. Aliquam in hendrerit urna. Pellentesque sit amet 
+                    sapien fringilla, mattis ligula consectetur, ultrices mauris. 
+                    Maecenas vitae mattis tellus. Nullam quis imperdiet augue. 
+                    Vestibulum auctor ornare leo, non suscipit magna interdum eu. 
+                    Curabitur pellentesque nibh nibh, at maximus ante fermentum sit 
+                    amet.
+                </div>
+                <div class="button2">
+                    <button><a href="#">View Routes</a></button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="row3">
+        <img src="../../public/quotepic.svg">
+        <div class="quote">
+            <div class="quote-para">
+                <span>“The temple is a point of intersection between heaven and earth. 
+                    In this sacred place, holy work will be performed through selfless 
+                    service and love. The temple reminds of all that is good and beautiful 
+                    in the world.”</span>
+            </div>
+            <div class="quote-author">
+                <span>David A. Bednar</span> 
+            </div>
+    </div>
+</div>
