dev: home gallery section finalize

--- a/src/components/homeGallery.html
+++ b/src/components/homeGallery.html
@@ -1,14 +1,41 @@
-<link rel="stylesheet" href="./homeGallery.css">
-
-<div class="container-card">
-    <div class="card">
-        <div class="card-content">
-            <h3>See the real beauty</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipiscing elit Ut et massa mi.</p>
-            <button>View Gallery</button>
-        </div>
-    </div>
-</div>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
     
+    <link rel="stylesheet" href="./homeGallery.css">
+    
+    <div class="container-card">
+        <div class="card">
+            <div class="card-content">
+                <h3>See the real beauty</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipiscing elit Ut et massa mi.</p>
+                <button>View Gallery</button>
+            </div>
+        </div>
+        <!-- <div class="gallery-images">
+            <div class="item item1"><img src="../../public/1.svg" alt=""></div>
+            <div class="item item2"><img src="../../public/2.svg" alt=""></div>
+            <div class="item item3"><img src="../../public/3.svg" alt=""></div>
+            <div class="item item4"><img src="../../public/4.svg" alt=""></div>
+            <div class="item item5"><img src="../../public/5.svg" alt=""></div>
+            <div class="item item6"><img src="../../public/6.svg" alt=""></div>
+        </div> -->
+
+        <!-- <div class="gallery-img">
+            <img src="../../public/gallerySectionimg.svg" alt="">
+        </div> -->
+
+    </div>
+</body>
+</html>
+
+    
+
 
 
