--- a/src/components/homeGallery.css
+++ b/src/components/homeGallery.css
@@ -11,6 +11,8 @@
     background: url('../../public/gallerySectionimg.svg');
     background-repeat: no-repeat;
     background-position: center;
+    margin-top: 10rem;
+    margin-bottom: 10rem;
 
 }
 
