--- a/src/components/intro.css
+++ b/src/components/intro.css
@@ -1,12 +1,22 @@
-*{
-    font-family: 'Montserrat';
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+@import url(../global.css);
+
+:root{
+    --shadow: 0px 0px 4px rgba(0, 0, 0, 0.04), 0px 8px 16px rgba(0, 0, 0, 0.08)
 }
 
-body{
-    background-color: #ffffff;
+button:hover{
+    box-shadow: var(--shadow);
+    cursor: pointer;
+    box-shadow: 0px 7px 10px rgba(80, 80, 80, 0.4);
+    color: #fff;
+    transform: translatex(7px);
+    transition: all 0.3s ease 0s;  
+}
+
+
+
+button{
+    transition: all 0.3s ease 0s;
 }
 
 .intro{
@@ -14,6 +24,13 @@ body{
     margin: auto;
     padding-left: 50px;
     padding-right: 50px;
+    margin-top: 8rem;
+    margin-bottom: 8rem;
+}
+
+.introsection{
+    padding: 0;
+    margin: 0;
 }
 
 .topic1{
@@ -150,37 +167,42 @@ body{
 }
 
 .row3{
+    background-image: url(../../public/quotepic.svg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 100vw;
+    height: 90vh;
     display: flex;
     align-items: center;
     flex-wrap: wrap;
     justify-content: center;
     position: relative;
-    padding-top: 150px;
+
 }
 
 .quote{
     position: absolute;
-    padding-left: 175px;
-    padding-right: 175px;
+    justify-content: center;
     text-align: center;
     color: #ffffff;
     
 }
 
 .quote-para{
-    font-size: 36px;
+    font-size: 2.5rem;
     font-weight: 200;
 }
 
 .quote-author{
-    font-size: 16px;
+    font-size: 1rem;
     font-weight: 500;
     padding-top: 40px;
 }
 
 @media (max-width: 991px){
     .introsection{
-        padding: 40px;
+        
         grid-template-columns: repeat(2,1fr);
     }
 }
@@ -192,10 +214,29 @@ body{
     .row2-col1{
         text-align: center;
     }
-    /*.row3 img{
-        position: absolute;
-        width: 549.92px;
-        height: 291px;
-        padding-left: -87px;
-    }*/
+    
+    .row3{
+        width: 100vw;
+        height: 60vh;
+    }
+
+    .quote-para {
+        font-size: 1.4rem !important;
+        line-height: 2rem;
+        text-align: center;
+        color: #ffffff;
+        padding: 20px;
+ 
+    }
+
+    .quote-author{
+        font-size: smaller;
+        font-weight: 500;
+        padding-top: 40px;
+    }
+    
+    .intro{
+        justify-content: center;
+        align-items: center;
+    }
 }
