--- a/src/components/intro.html
+++ b/src/components/intro.html
@@ -50,7 +50,7 @@
                 <div class="row2-col2">
                     <div class="topic2">
                         <div class="topic2-part1">
-                            <span>6 trails, One </span>
+                            <span>6 trails</span>, <span class="one">One</span>  
                         </div>
                         <div class="topic2-part2">
                             <span>Sacred location.</span>
