dev: hero section

--- a/src/components/hero.html
+++ b/src/components/hero.html
@@ -1,1 +1,26 @@
-<h1>Hero Section</h1> <!-- remove this line when developing -->
+<section class="hero-section">
+    <div class="container">
+      <div class="hero-title">
+        <h1>Adam's Peak</h1>
+      </div>
+      <div class="sinhala-font-container">
+        <img class="sinhala-font" src="./images/Y%S mdoh.png" alt="" />
+      </div>
+      <div class="content">
+        <p>
+          Adam’s Peak is one of the most iconic heritages in Sri Lanka. This
+          conical mountain is located in the <br> Sabaragamuwa Province. It is also
+          known as “Samanala Kanda”. This has a history of more than thousand <br>
+          years. People of all four main religions in Sri Lanka is truely
+          believe that there are some miracles are still <br> happening at the
+          sacred footprint on top of the mountain. Sri Pada is the only
+          mountain in the world that <br> receives benefactions and veneration of
+          devotees belonging to different faiths.
+        </p>
+      </div>
+
+      <div class="hero-button">
+        <button>Explore More</button>
+      </div>
+    </div>
+  </section>
