dev: new file structure and index.html file

--- a/src/footer/footer.css
+++ b/src/footer/footer.css
@@ -6,7 +6,10 @@
     box-sizing: border-box;
     display: grid;
     align-content: end;
+    width: 100vw;
 }
+
+
 
 footer{
     background: linear-gradient(to right, #0D0D0D, #000000);
