fix: github actions

--- a/index.css
+++ b/index.css
@@ -209,4 +209,4 @@ nav li a:hover {
   .container-hero {
     height: 80vh;
   }
-}/*# sourceMappingURL=main.css.map */
+}/*# sourceMappingURL=index.css.map */
