--- a/index.scss
+++ b/index.scss
@@ -285,6 +285,14 @@ nav {
         }
         
       }
+
+      .sinhala-font-container{
+
+        img{
+
+          width: 16em;
+        }
+      }
     }
 
   }
