--- a/src/components/intro.css
+++ b/src/components/intro.css
@@ -4,20 +4,7 @@
     --shadow: 0px 0px 4px rgba(0, 0, 0, 0.04), 0px 8px 16px rgba(0, 0, 0, 0.08)
 }
 
-button:hover{
-    box-shadow: var(--shadow);
-    cursor: pointer;
-    box-shadow: 0px 7px 10px rgba(80, 80, 80, 0.4);
-    color: #fff;
-    transform: translatex(7px);
-    transition: all 0.3s ease 0s;  
-}
 
-
-
-button{
-    transition: all 0.3s ease 0s;
-}
 
 .intro{
     max-width: 1300px;
@@ -31,6 +18,7 @@ button{
 .introsection{
     padding: 0;
     margin: 0;
+    min-height: 100vh;
 }
 
 .topic1{
