--- a/src/css/global.css
+++ b/src/css/global.css
@@ -10,3 +10,18 @@
   padding: 0;
   box-sizing: border-box;
 }
+
+button:hover{
+  box-shadow: var(--shadow);
+  cursor: pointer;
+  box-shadow: 0px 7px 10px rgba(80, 80, 80, 0.4);
+  color: #fff;
+  transform: translatex(7px);
+  transition: all 0.3s ease 0s;  
+}
+
+
+
+button{
+  transition: all 0.3s ease 0s;
+}
