--- a/src/components/forum.html
+++ b/src/components/forum.html
@@ -1,28 +1,1 @@
-<div class="forum">
-    <div class="forumAddComment">
-        <p class="forumHeading">
-            Let's share your <span>experience</span> here!
-        </p>
-        <div class="button" id="open-form">
-            <div class="buttonText">
-                Add your experience
-            </div>
-            <div class="plusButton">
-                <div class="plusText">
-                    +
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="popupBox">
-        <div class="closeButton">&times;</div>
-        <div class="popupPadding">
-            <form action="" method="post">
-                <textarea name="" id="experience" placeholder="Add your experience "></textarea>
-                <input type="text" name="name" id="nameField" placeholder="Name">
-                <input type="text" name="subject" id="subject" placeholder="Subject">
-                <input type="submit" value="Add a comment">
-            </form>
-        </div>
-    </div>
-</div>
+<h1>Forum</h1> <!-- remove this line when developing -->
