dev: responsiveness huttoo

--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -476,7 +476,13 @@ nav {
   .intro{
       justify-content: center;
       align-items: center;
-      height: 200vh;
+       min-height: 217vh;
+  }
+
+  .row1{
+
+
+
   }
 }
 
