--- a/src/css/index.css
+++ b/src/css/index.css
@@ -375,7 +375,7 @@ nav li a:hover {
   .intro {
     justify-content: center;
     align-items: center;
-    height: 200vh;
+    min-height: 217vh;
   }
 }
 @media only screen and (max-width: 1367px) and (min-width: 500px) {
