--- a/src/css/index.css
+++ b/src/css/index.css
@@ -431,4 +431,20 @@ nav li a:hover {
     font-weight: 500;
     padding-top: 40px;
   }
+}
+@media only screen and (max-width: 839px) and (max-height: 785px) {
+  .container-hero {
+    height: 110vh;
+  }
+  .intro {
+    min-height: 250vh;
+  }
+}
+@media only screen and (max-width: 839px) and (max-height: 640px) {
+  .intro {
+    min-height: 290vh;
+  }
+  .row3-img {
+    height: 110vh;
+  }
 }/*# sourceMappingURL=index.css.map */
