--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -555,3 +555,28 @@ nav {
   }
   
 }
+
+//very small screen sizes
+
+@media only screen and (max-width:839px) and (max-height:785px){
+
+  .container-hero{
+    height: 110vh;
+  }
+
+  .intro{
+    min-height: 250vh;
+  }
+
+}
+
+@media only screen and (max-width:839px) and (max-height:640px){
+  .intro{
+    min-height: 290vh;
+  }
+
+  .row3-img{
+    height: 110vh;
+  }
+
+}
