--- a/src/navBar/navBar.css
+++ b/src/navBar/navBar.css
@@ -6,7 +6,7 @@
 }
 
 .navbar {
-  padding: 1em;
+  padding-top: 1em;
 }
 .navbar .logoimage {
   height: 30px;
@@ -40,6 +40,10 @@ ul {
 
 nav.menu-button {
   display: block;
+  background: linear-gradient(279.22deg, rgba(153, 153, 153, 0.28) 7.79%, rgba(0, 0, 0, 0.1624) 133.84%);
+  -webkit-backdrop-filter: blur(25px);
+          backdrop-filter: blur(25px);
+  box-shadow: 0px 4px 41px 7px rgba(0, 0, 0, 0.25);
 }
 
 nav {
