--- a/src/navBar/navBar.scss
+++ b/src/navBar/navBar.scss
@@ -1,13 +1,13 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat&family=Poppins&display=swap");
 
-.navbarSection{
+.navbarSection {
   margin: 0;
   padding: 0;
   font-family: "montserrat";
 }
 
 .navbar {
-  padding: 1em;
+  padding-top: 1em;
 
   .logoimage {
     height: 30px;
@@ -23,7 +23,7 @@
   }
 
   .container {
-    display: flex;
+    display: flex;  
     place-content: space-between;
     margin: 1em 5%;
   }
@@ -46,6 +46,9 @@ ul {
 
 nav.menu-button {
   display: block;
+  background: linear-gradient(279.22deg, rgba(153, 153, 153, 0.28) 7.79%, rgba(0, 0, 0, 0.1624) 133.84%);
+  backdrop-filter: blur(25px);
+  box-shadow: 0px 4px 41px 7px rgba(0, 0, 0, 0.25);
 }
 
 nav {
@@ -89,6 +92,7 @@ nav {
 }
 
 @media only screen and (min-width: 840px) {
+
   .mobile-menu,
   .mobile-menu-exit {
     display: none;
@@ -132,21 +136,6 @@ nav {
       padding: 0.1em 1em;
       position: relative;
     }
-
-    // a:after{
-    //     content: "";
-    //     position: absolute;
-    //     background-color: white;
-    //     height: 3px;
-    //     width: 0;
-    //     left: 0;
-    //     bottom: -10px;
-    //     transition: 0.3s;
-    // }
-
-    // a:hover:after{
-    //     width: 100%;
-    // }
 
     ul {
       margin-top: 0;
