--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -1,9 +1,7 @@
-@import '/src/css/global.css';
-@import '../navBar/navBar.css';
-
+@import "/src/css/global.css";
+@import "../navBar/navBar.css";
 
 // Hero Section
-
 
 .hero-section {
   background-image: url(/public/Hero-Image.png);
@@ -47,11 +45,14 @@
   color: white;
   font-size: 1em;
   font-weight: 600;
-
 }
 
 .hero-button {
-  background: linear-gradient(93.97deg, #D9D9D9 -173.88%, rgba(217, 217, 217, 0) 214.31%);
+  background: linear-gradient(
+    93.97deg,
+    #d9d9d9 -173.88%,
+    rgba(217, 217, 217, 0) 214.31%
+  );
   border-radius: 10px;
   width: 15%;
   padding-top: 1em;
@@ -61,7 +62,6 @@
 }
 
 @media (max-width: 600px) {
-
   .hero-section {
     padding-bottom: 68px;
   }
@@ -70,7 +70,6 @@
     width: 100%;
     margin-top: 68px;
   }
-
 
   .english-title {
     font-size: 12.2vw;
@@ -99,7 +98,6 @@
 
   .hero-button-text {
     font-size: 0.9em;
-
   }
 
   .hero-button {
@@ -110,17 +108,16 @@
     text-align: center;
   }
 
-  p{
+  p {
     padding-top: 2rem;
     padding-bottom: 1rem;
     margin: 0 !important;
   }
 }
 
+// Intro Section
 
-// Intro Section 
-
-.intro-section-container{
+.intro-section-container {
   background-color: white;
   padding-top: 8.33%;
   padding-right: 15%;
@@ -131,8 +128,12 @@
   grid-template-rows: minmax(400px, auto);
   gap: 4rem;
 
-  button{
-    background: linear-gradient(93.66deg, #000000 -109.29%, rgba(46, 46, 46, 0.56) 298.88%);
+  button {
+    background: linear-gradient(
+      93.66deg,
+      #000000 -109.29%,
+      rgba(46, 46, 46, 0.56) 298.88%
+    );
     border-radius: 10px;
     color: white;
     width: 30%;
@@ -145,118 +146,114 @@
     border: none;
   }
 
-  h3{
+  h3 {
     font-weight: 300;
     font-size: 4rem;
   }
 
-  span{
+  span {
     font-weight: 500;
   }
 
-  p{
+  p {
     font-weight: 300;
     padding-top: 3rem;
     padding-bottom: 3rem;
   }
-
 }
 
-.intro-top-left{
+.intro-top-left {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: flex-start;
 }
 
-.intro-top-right{
-  
+.intro-top-right {
   background-image: url(../../public/intro-1.jpg);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
 }
 
-.intro-bottom-left{
+.intro-bottom-left {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: flex-start;
 
-  .intro-coordinates-text{
+  .intro-coordinates-text {
     font-size: 2rem;
     padding: 0;
   }
 
-  .intro-coordinates{
+  .intro-coordinates {
     font-size: 2rem;
     font-weight: 500;
   }
-
 }
 
-.intro-bottom-right{
+.intro-bottom-right {
 }
 
 @media (max-width: 600px) {
-  .intro-section-container{
+  .intro-section-container {
     grid-template-columns: 1fr;
     gap: 3px;
     padding-top: 20%;
     padding-bottom: 20%;
 
-    .intro-top-left{
+    .intro-top-left {
       margin-bottom: 4rem;
     }
 
-    .intro-top-right{
+    .intro-top-right {
       height: 300px;
     }
 
-    .intro-bottom-left{
+    .intro-bottom-left {
       height: 300px;
       align-items: center;
       align-content: center;
     }
 
-    button{
+    button {
       width: 50%;
       padding-top: 1em;
       padding-bottom: 1em;
       font-size: 0.8rem;
     }
-  
-    h3{
+
+    h3 {
       font-weight: 300;
-      font-size:  2.5rem;
+      font-size: 2.5rem;
     }
-  
-    span{
+
+    span {
       font-weight: 500;
     }
-  
-    p{
+
+    p {
       font-weight: 300;
       padding-top: 1.5rem;
       padding-bottom: 1.5rem;
     }
 
-    .intro-coordinates-text{
+    .intro-coordinates-text {
       font-size: 1.5rem;
       padding: 0;
     }
-  
-    .intro-coordinates{
+
+    .intro-coordinates {
       font-size: 1.5rem;
       font-weight: 500;
     }
   }
 }
 
-
 // quote section
 
-.quote-section-container{
+.quote-section-container {
   display: flex;
   flex-direction: column;
   background-image: url(../../public/quote-pic.png);
@@ -271,34 +268,106 @@
   justify-content: center;
   align-items: center;
 
-  h3{
+  h3 {
     font-size: 3rem;
     font-weight: 300;
     color: white;
     text-align: center;
   }
 
-  p{
+  p {
     padding-top: 2rem;
     color: rgba(255, 255, 255, 0.66);
   }
-
 }
 
 @media (max-width: 600px) {
-  .quote-section-container{
+  .quote-section-container {
     padding: 1rem 5rem 1rem 5rem;
 
-    h3{
+    h3 {
       font-size: 1.6rem;
       font-weight: 300;
       color: white;
       text-align: center;
     }
-  
-    p{
+
+    p {
       padding-top: 2rem;
       color: rgba(255, 255, 255, 0.66);
     }
   }
 }
+
+//gallery section
+
+.container-card{
+  font-family: 'Montserrat';
+  min-width: 100vw;
+  height: 1000px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background: url('../../public/gallery-background.jpg');
+  background-repeat: no-repeat;
+  background-position: center;
+  margin-top: 5rem;
+  margin-bottom: 5rem;
+
+  .card{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    width: 350px;
+    height: 400px;
+    margin: 30px;
+    box-shadow: 0px 4px 41px 7px rgba(0, 0, 0, 0.25);
+    background: linear-gradient(279.22deg, rgba(153, 153, 153, 0.28) 7.79%, rgba(0, 0, 0, 0.1624) 133.84%);
+    border-radius: 16px;
+    backdrop-filter: blur(25px);
+    padding: 30px;
+    border: 0.5px solid white;
+
+    h3{
+      color: white;
+      font-weight: 300;
+      font-size: 3rem;
+      margin: 0;
+    }
+    p{
+      color: white;
+      font-weight: 400;
+      margin-top: 50px;
+      margin-bottom: 50px;
+      padding-left: 30px;
+      padding-right: 30px;
+    }
+    button{
+      background: linear-gradient(93.97deg, #D9D9D9 -173.88%, rgba(217, 217, 217, 0) 214.31%);
+      width: 180px;
+      height: 50px;
+      border-radius: 10px;
+      color: white;
+      outline: none;
+      border: none;
+      font-size: 1rem;
+    }
+  }
+
+}
+
+.container-card .card button:hover{
+  cursor: pointer;
+}
+
+
+
+
+
+
+
+
+
+
