--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,5 +1,8 @@
 @import "/src/css/global.css";
 @import "../navBar/navBar.css";
+@import "../footer/footer.css";
+
+
 .hero-section {
   background-image: url(/public/Hero-Image.png);
   background-position: center;
@@ -308,4 +311,226 @@
 
 .container-card .card button:hover {
   cursor: pointer;
+}
+
+.footer-main-div {
+  margin: 0;
+  padding: 0;
+  color: white;
+  font-weight: lighter;
+  box-sizing: border-box;
+  display: grid;
+  align-content: end;
+  width: 100vw;
+}
+
+footer {
+  background: linear-gradient(to right, #0D0D0D, #000000);
+  position: relative;
+  width: 100%;
+  padding: 50px 50px;
+  height: auto;
+}
+
+footer .container-div {
+  width: 100%;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-gap: 20px;
+  justify-content: center;
+  align-items: center;
+}
+
+.logosec-part1 {
+  flex-basis: 20%;
+  justify-content: center;
+  text-align: center;
+}
+
+.mainlogo {
+  width: 60%;
+}
+
+.logosec-part2 {
+  width: 100%;
+  height: 15px;
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: lighter;
+  font-size: 10px;
+  line-height: 15px;
+  justify-content: center;
+  text-align: center;
+}
+
+.menusec {
+  font-size: 15px;
+  position: relative;
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+}
+
+.menusec li {
+  list-style: none;
+}
+
+.menusec li a {
+  color: white;
+  text-decoration: none;
+  margin-bottom: 10px;
+  display: inline-block;
+  transition: all 0.3s;
+}
+
+.menusec li a:hover {
+  padding-left: 8px;
+}
+
+.contactinfo {
+  position: relative;
+  display: grid;
+  justify-content: center;
+}
+
+.contactinfo li {
+  display: grid;
+  grid-template-columns: 30px 1fr;
+  margin-bottom: 16px;
+}
+
+.contactinfo li span {
+  font-size: 15px;
+}
+
+.contactinfo a {
+  font-size: 15px;
+  color: white;
+  text-decoration: none;
+  transition: all 0.3s;
+}
+
+.contactinfo a:hover {
+  padding-left: 8px;
+}
+
+.buttonsec {
+  text-align: center;
+}
+
+.buttonsec-part1 {
+  text-align: right;
+  font-size: 15px;
+  padding-right: 15px;
+  justify-content: right;
+}
+
+.buttonsec-part2 {
+  text-align: right;
+  padding-right: 15px;
+  font-size: 20px;
+  justify-content: right;
+  font-weight: normal;
+}
+
+.buttonsec-part2 button {
+  background: linear-gradient(93.97deg, #D9D9D9 -173.88%, rgba(217, 217, 217, 0) 214.31%);
+  border-radius: 10px;
+  width: 204px;
+  height: 48px;
+  font-weight: normal;
+  color: #ffffff;
+  font-size: 16px;
+  margin-top: 10px;
+  justify-content: center;
+  border: none;
+  outline: none;
+}
+
+.buttonsec-part2 button a {
+  text-decoration: none;
+  font-weight: normal;
+  color: white;
+}
+
+.copyright {
+  background-color: #000000;
+  width: 100%;
+  padding: 20px 0 20px;
+  font-size: 10px;
+  display: flex;
+  justify-content: space-between;
+  padding-left: 5rem;
+  padding-right: 5rem;
+  line-height: 10px;
+  position: relative;
+}
+
+.allright {
+  text-align: left;
+}
+
+.privacypolicy {
+  text-align: right;
+}
+
+@media (max-width: 991px) {
+  footer {
+    padding: 40px;
+  }
+  footer .container-div {
+    grid-template-columns: repeat(2, 1fr);
+  }
+  .copyright {
+    padding: 8px 40px;
+    display: flex;
+    flex-direction: column;
+  }
+}
+@media (max-width: 768px) {
+  footer .container-div {
+    grid-template-columns: repeat(1, 1fr);
+    text-align: center;
+  }
+  .buttonsec-part1 {
+    text-align: center;
+  }
+  .buttonsec-part2 {
+    text-align: center;
+  }
+  .allright {
+    text-align: center;
+  }
+  .privacypolicy {
+    text-align: center;
+  }
+}
+@media (max-width: 767px) {
+  .footer-col2 {
+    width: 50%;
+    margin-bottom: 30px;
+  }
+}
+@media (max-width: 767px) {
+  .footer-col3 {
+    width: 50%;
+    margin-bottom: 30px;
+  }
+}
+@media (max-width: 767px) {
+  .footer-col4 {
+    width: 50%;
+    margin-bottom: 30px;
+  }
+}
+@media (max-width: 767px) {
+  .footer2 {
+    width: 50%;
+  }
+}
+@media (max-width: 574px) {
+  .footer2 {
+    width: 100%;
+  }
 }/*# sourceMappingURL=index.css.map */
