--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -48,11 +48,8 @@
 }
 
 .hero-button {
-  background: linear-gradient(
-    93.97deg,
-    #d9d9d9 -173.88%,
-    rgba(217, 217, 217, 0) 214.31%
-  );
+  background: linear-gradient(93.97deg, #D9D9D9 -173.88%, rgba(173, 173, 173, 0) 214.31%);
+  backdrop-filter: blur(2px);
   border-radius: 10px;
   width: 15%;
   padding-top: 1em;
@@ -326,7 +323,7 @@
     box-shadow: 0px 4px 41px 7px rgba(0, 0, 0, 0.25);
     background: linear-gradient(279.22deg, rgba(153, 153, 153, 0.28) 7.79%, rgba(0, 0, 0, 0.1624) 133.84%);
     border-radius: 16px;
-    backdrop-filter: blur(25px);
+    backdrop-filter: blur(18px);
     padding: 30px;
     border: 0.5px solid white;
 
@@ -375,6 +372,7 @@
   display: grid;
   align-content: end;
   width: 100vw;
+  font-weight: 400;
 }
 
 
@@ -385,6 +383,7 @@ footer{
   width: 100%;
   padding: 50px 50px;
   height: auto;
+  
 }
 
 footer .container-div{
@@ -411,7 +410,7 @@ footer .container-div{
   height: 15px;
   font-family: 'Montserrat';
   font-style: normal;
-  font-weight: lighter;
+  font-weight: 400;
   font-size: 10px;
   line-height: 15px;
   justify-content: center;
