--- a/src/css/index.css
+++ b/src/css/index.css
@@ -9,6 +9,9 @@
   padding-left: 8.33%;
   padding-bottom: 288px;
 }
+.hero-section a {
+  text-decoration: none;
+}
 
 .hero-content {
   margin-top: 157px;
