--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -11,6 +11,10 @@
   padding-right: 8.33%;
   padding-left: 8.33%;
   padding-bottom: 288px;
+
+  a{
+    text-decoration: none;
+  }
 }
 
 .hero-content {
