--- a/src/pages/explore-css/style.css
+++ b/src/pages/explore-css/style.css
@@ -15,7 +15,7 @@
 }
 .card{
   border-radius: 25px;
-  background-color: #FFF;
+  background-color: rgba(255, 255, 255, 0);
   max-height: auto;
 }
 
