--- a/src/pages/gallery.css
+++ b/src/pages/gallery.css
@@ -1,3 +1,80 @@
-@import url(./../global.css);
+@import url(/src/css/global.css);
 @import url(./../navBar/navBar.css);
 @import url(./../footer/footer.css);
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+* {
+    box-sizing: border-box;
+    font-family: "montserrat";
+      font-style: normal;
+  }
+  
+  body {
+    margin: 0;
+    font-family: Arial;
+    background-color: black;
+  }
+  .gallery{
+    margin-left: 8.33%;
+    margin-right: 8.33%;
+    margin-top: 177;
+    margin-bottom: 247;
+  }
+  .header {
+    
+    font-size: 4.5vw;
+    font-weight: 300;
+    color: white ;
+    margin-bottom : 67;
+  }
+  
+  .row {
+    display: -ms-flexbox; /* IE10 */
+    display: flex;
+    -ms-flex-wrap: wrap; /* IE10 */
+    flex-wrap: wrap;
+    padding: 0 4px;
+  }
+  
+  /* Create four equal columns that sits next to each other */
+  .column {
+    -ms-flex: 30%; /* IE10 */
+    flex: 30%;
+    max-width: 30%;
+    padding: 0 4px;
+  }
+  
+  .column img {
+    margin-top: 8px;
+    vertical-align: middle;
+    width: 100%;
+  }
+  
+  /* Responsive layout - makes a two column-layout instead of four columns */
+  @media screen and (max-width: 800px) {
+    .column {
+      -ms-flex: 50%;
+      flex: 50%;
+      max-width: 50%;
+    }
+  }
+  
+  /* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
+  @media screen and (max-width: 600px) {
+    .column {
+      -ms-flex: 100%;
+      flex: 100%;
+      max-width: 100%;
+
+    }
+    .gallery{
+      margin-top: 45px;
+    margin-bottom: 82px;
+    
+    }
+    .header{
+      font-size: 8vw;
+    }
+
+  }
+ 
