--- a/src/pages/gallery.css
+++ b/src/pages/gallery.css
@@ -3,29 +3,26 @@
 @import url(./../footer/footer.css);
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
-* {
-    box-sizing: border-box;
-    font-family: "montserrat";
-      font-style: normal;
-  }
-  
+
   body {
-    margin: 0;
-    font-family: Arial;
     background-color: black;
   }
+  
+
   .gallery{
     margin-left: 8.33%;
-    margin-right: 8.33%;
-    margin-top: 177;
-    margin-bottom: 247;
+    /* margin-right: 8.33%; */
+    margin-top: 100px;
+    margin-bottom: 100px;
   }
   .header {
-    
+    width: 100%;
+    display: flex;
+    justify-content: center;
     font-size: 4.5vw;
     font-weight: 300;
     color: white ;
-    margin-bottom : 67;
+    margin-bottom : 50px;
   }
   
   .row {
@@ -33,7 +30,7 @@
     display: flex;
     -ms-flex-wrap: wrap; /* IE10 */
     flex-wrap: wrap;
-    padding: 0 4px;
+
   }
   
   /* Create four equal columns that sits next to each other */
@@ -70,6 +67,8 @@
     .gallery{
       margin-top: 45px;
     margin-bottom: 82px;
+    margin-right: 8.33%;
+    
     
     }
     .header{
