--- a/src/navBar/navBar.scss
+++ b/src/navBar/navBar.scss
@@ -26,6 +26,7 @@
     display: flex;  
     place-content: space-between;
     margin: 1em 5%;
+    // background-color: black;
   }
 
   .mobile-menu {
