--- a/src/pages/developers.css
+++ b/src/pages/developers.css
@@ -7,6 +7,10 @@ body{
     background-color: #000000;
 }
 
+.container{
+    background:#000000;
+}
+
 .developers{
     max-width: 1300px;
     margin: auto;
@@ -45,8 +49,14 @@ body{
 
 .row2{
     min-width: 300px;
+    height: 80vh;
     align-items: center;
     text-align: center;
+    background: url(../../public/ourteampic.svg);
+    background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  margin-top: 5%;
 }
 
 .row2 img{
@@ -132,12 +142,12 @@ body{
 }
 
 .row5{
-    min-width: 300px;
+    width: 80vw;
     align-items: center;
     text-align: center;
 }
 
-.container{
+.container2{
     width: 1150px;
     height: 784px;
     background: #FFFFFF;
@@ -211,13 +221,77 @@ body{
 }
 
 @media (max-width: 768px){
+.row1{
+    flex-direction: column;
+    padding-left: 5%;
+}
+
+.row1-col1{
+    font-size: 2rem;
+    padding-top: 0;
+    margin-left: 0;
+}
+
+.row1-col2{
+   padding-top: 0;
+   padding-left: 0;
+}
+
+.row2{
+    height: 40vh;
+    padding: 5%;
+}
+
+
     .developers{
         grid-template-columns: repeat(1,1fr);
+        padding: 0;
     }
     .hr{
-        width: 100%;
+        width: 90%;
     }
+
+    .row4{
+        flex-direction: column;
+    }
+
+    .topic{
+        font-size: 2rem;
+    }
+
+    .row4-col2{
+        display: none;
+    }
+
+    .row5{
+        width: 80vw;
+    }
+
+    .row5-col1{
+        width: auto;
+    }
+
+    .container2{
+        width: 80vw;
+    }
+    .containertopic{
+        font-size: 2rem;
+        padding-left: 6%;
+        width: 130%;
+    }
+    .containerdescription{
+        padding-left: 6%;
+        width: 130%;
+    }
+
+    .button2{
+        padding-left: 6%;
+    }
+
+   
+
     .row5-col2{
         display: none;
     }
 }
+
