Made routes page dynamic onClick

--- a/src/pages/routes-css/routes.scss
+++ b/src/pages/routes-css/routes.scss
@@ -50,7 +50,13 @@
         color: white;
         background: linear-gradient(93.66deg, #000000 -109.29%, rgba(46, 46, 46, 0.56) 298.88%) !important;
     }
+
+    #hattonButton{
+        background: linear-gradient(93.66deg, #000000 -109.29%, rgba(46, 46, 46, 0.56) 298.88%);
+        color: #FFFFFF;
+    }
 }
+
 
 
 .routes-tab-header{
