--- a/src/pages/routes-css/routes.css
+++ b/src/pages/routes-css/routes.css
@@ -39,6 +39,10 @@
   color: white;
   background: linear-gradient(93.66deg, #000000 -109.29%, rgba(46, 46, 46, 0.56) 298.88%) !important;
 }
+.routes-tab-header #hattonButton {
+  background: linear-gradient(93.66deg, #000000 -109.29%, rgba(46, 46, 46, 0.56) 298.88%);
+  color: #FFFFFF;
+}
 
 .routes-tab-header {
   padding-left: 4rem;
